--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "reactstrap": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
